service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: event-portal
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
