ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-portal
  namespace: event-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: event.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
